tests/invalid/type/manual_ex017.pts
function main() : void {
    var x = []; // Erreur : E3006 MISSING_TYPE_CONTEXT
    var m = {}; // Erreur : E3006 MISSING_TYPE_CONTEXT
}
